# UMOD

./: README.md  package-lock.json  package.json  requirements.txt
ocr/: ocr.py
src/: index.html  loading.html  main.js  styles.css
src-tauri/: 2  Cargo.toml  pyproject.toml  tauri.conf.json
src-tauri/capabilities/: core.json  drag.json  reactive_overlay.json  region-overlay.json  region_overlay.json  window_controls.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  run.rs  state.rs
src-tauri/src/app/: mod.rs  rc_service.rs  window_presenter.rs
src-tauri/src/app/region_selection/: controller.rs  fsm.rs  mod.rs  overlay_window.rs  renderer.rs  state.rs
src-tauri/src/infra/: manga_ocr.rs  mod.rs  region_capture_adapter.rs
src-tauri/src/infra/dictionary/: adapter_models.rs  mod.rs
src-tauri/src/infra/dictionary/yomitan/: extractors.rs  mod.rs  yomitan_models.rs
src-tauri/src/infra/screenshot/: mod.rs
src-tauri/src/ocr/: Manga_OCR.py  mod.rs
src-tauri/src/shared/models/: dictionary.rs
src-tauri/src/ui/: mod.rs  tray.rs  windows.rs
src-tauri/src/ui/reactive_overlay/: mod.rs
src/dictionary/: lookup.css  lookup.html  lookup.js
src/overlays/: reactive_overlay.css  reactive_overlay.html  reactive_overlay.js  region_selection.css  region_selection.html  region_selection.js
