[package]
name = "testwindowviews"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "maturin_project"
crate-type = ["cdylib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pyo3 = { version = "0.27", features = ["auto-initialize"] }
anyhow = "1.0.100"
screenshots = "0.8.10"
softbuffer = "0.4.6"
winit = "0.30.12"
tokio = "1.48.0"
reqwest = {version = "0.12.25", features = ["json", "blocking"] }
tauri-plugin-clipboard-manager = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
